# rdf-canonize-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  tests
benches/: README.md  bench.rs  merge.nq
src/: IdentifierIssuer.rs  identifier_issuer.rs  lib.rs  main.rs  message_digest.rs  nquads.rs  permuter.rs  permuter_fast.rs  permuter_old.rs  urdna2015.rs
