[package]
name = "rdf-canonize-rs"
version = "0.1.0"
authors = ["Ganesh Annan <gannan@digitalbazaar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
lazy_static = "1.4.0"
lexical-sort = "0.3.1"
regex = "1"
sha2 = "0.9"
