[package]
name = "rdf-canonize-rs"
version = "0.1.0"
authors = ["Ganesh Annan <gannan@digitalbazaar.com>"]
edition = "2018"

[lib]
name = "rdf_canonize"
path = "src/lib.rs"

[[bin]]
name = "rdf-canonize"
path = "src/main.rs"

[dependencies]
hex = "0.4"
hyperscan = { path = "../rust-hyperscan/hyperscan", features = ["chimera"] }
lazy_static = "1.4.0"
lexical-sort = "0.3.1"
regex = "1"
rio_api = "0.5"
rio_turtle = "0.5"
sha2 = "0.9"
