[package]
name = "rdf-canonize-rs"
version = "0.1.0"
authors = ["Ganesh Annan <gannan@digitalbazaar.com>"]
edition = "2018"

[lib]
name = "rdf_canonize"
path = "src/lib.rs"

[[bin]]
name = "rdf-canonize"
path = "src/main.rs"

[dependencies]
hex = "0.4"
lazy_static = "1.4.0"
lexical-sort = "0.3.1"
rayon = "1.5.0"
regex = "1"
sha2 = "0.9"
